deployments/prod-gke/init/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app/role: api-service
spec:
  type: ClusterIP
  selector:
    app/role: api-pod
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app/role: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app/role: api-pod
  template:
    metadata:
      name: api-pod
      labels:
        app/role: api-pod
    spec:
      containers:
        - name: api-pod
          # Patch overwrites image.
          image: asia.gcr.io/PROJECT-ID/translator-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
              protocol: TCP
          envFrom:
            - configMapRef:
                name: api-config-env
            - secretRef:
                name: api-secrets-env
          volumeMounts:
            - name: secrets
              mountPath: /app/certs
      volumes:
        - name: secrets
          secret:
            secretName: api-secrets-file
