deployments/prod-gke/init/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
  labels:
    app/role: envoy-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    # Ref. https://cloud.google.com/kubernetes-engine/docs/concepts/ingress-xlb#https_tls_between_load_balancer_and_your_application
    cloud.google.com/app-protocols: '{"envoy-svc-port":"HTTP"}'
    cloud.google.com/backend-config: '{"ports": {"envoy-svc-port":"envoy-backendconfig"}}'
spec:
  # Use ClusterIP if NEG is used.
  type: ClusterIP
  selector:
    app/role: envoy-pod
  ports:
  - name: envoy-svc-port
    port: 9000
    targetPort: 9000
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enovy-deployment
  labels:
    app/role: envoy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app/role: envoy-pod
  template:
    metadata:
      labels:
        app/role: envoy-pod
    spec:
      containers:
        - name: envoy-pod
          image: envoyproxy/envoy:v1.16.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: envoy-yaml
              mountPath: /etc/envoy
            - name: secrets
              mountPath: /app/certs
      volumes:
        - name: envoy-yaml
          configMap:
            name: envoy-config-file
        - name: secrets
          secret:
            secretName: api-secrets-file
